Scrollbar Issues.
- Removed the 15px padding-right in nav when "modal-open" that I have added.
º It's only needed when I put an external mouse, that brings a 'windows like' scrollbar that takes 15px, and "modal" opened removes it moving the nav right 15px everytime it opens.
º Mac Os scrollbar floats fixed so its not a problem.

- I now removed "scrollbars" in HTML anyway.

-- Must need to create a "custom-scrollbar" soon.

--- a/styles/tablet_and_desktop.scss
+++ b/styles/tablet_and_desktop.scss
@@ -17,7 +17,7 @@
         //overflow-x:hidden!important;//To Leave Only This
         //overflow-y:scroll!important;
         nav.top-nav {
-          padding-right:15px;
+          //padding-right:15px;
           > .container, > .container-fluid {
             > ul {
               //padding-right:35px;//(20px (From Nav Ul Padding Right/Left) + 15px (New To Replace Scrollbar))//!important (No Need, Just Used While Testing)//While "scrollbar" Is 'On' In HTML, And While Modal Adds Inline Style "overflow:none" To Body, Also "padding-right:15px;", And This ClassName ".modal-open"
